feat: complete implementation